@@ -2,13 +2,14 @@
 root = true
 
 # elementary defaults
+# Unix-style newlines with a newline ending every file
 [*]
 charset = utf-8
 end_of_line = lf
+insert_final_newline = true
 indent_size = tab
 indent_style = space
-insert_final_newline = false
-max_line_length = 79
+max_line_length = 80
 tab_width = 4
 
 # Markup files
