@@ -6,7 +6,7 @@ from gi import require_version
 
 require_version("Gdk", "3.0")
 require_version("Gtk", "3.0")
-require_version("GtkSource", "3.0")
+require_version("GtkSource", "4")
 require_version("Pango", "1.0")
 require_version("GtkSpell", "3.0")
 
